Protect against CSRF in web admin console

--- a/apps/meerkat/src/assets/views/about.hbs
+++ b/apps/meerkat/src/assets/views/about.hbs
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>About - Meerkat DSA</title>
-        <meta name="referrer" content="noreferrer">
+        <meta name="csrf-token" content="{{csrfToken}}">
+        <meta name="referrer" content="no-referrer">
         <style>
             body {
                 background-color: black;
