--- a/apps/meerkat/src/assets/views/ob.hbs
+++ b/apps/meerkat/src/assets/views/ob.hbs
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Op. Bindings - Meerkat DSA</title>
-        <meta name="referrer" content="noreferrer">
+        <meta name="referrer" content="no-referrer">
+        <meta name="csrf-token" content="{{csrfToken}}">
         <style>
             body {
                 background-color: black;
